# SpeedyGo

./: .gitignore  CMakeBuild.bat  CMakeConfigure.bat  CMakeLists.txt  INFO_TRASEE.txt  Maps_Client.hpp  README.md  all.bat  build.bat  build_and_post.sh  compatibilityFunctions.hpp  config.json  data.xlsx  database.hpp  date.csv  date.in  declarations.hpp  distance_matrix.json  distance_matrix.xlsx  distante_orase.json  geoLocation.py  geolocation.py  gps.hpp  log.txt  logic.hpp  login.hpp  main  main.cpp  random_produse.py  run.bat  setup.bat  test.in  test_file.txt
CSV_Sample_Data/: depozit.csv  oras.csv  produs.csv
Demo/: SpeedyGo.sql
Others/CSV_Sample_Data/: depozit.csv
Project_Files/: Maps_Client.hpp  cross_platform_compatibility.hpp  database.hpp  declarations.hpp  distance_calculator.hpp  distante_orase.json  legaturi.txt  log.txt  logic.hpp  main  main.cpp
demo/: oras.csv  produs.csv
include/: GoogleMatrixAPI.hpp  database.hpp  declarations.hpp  dijkstra.hpp  haversine.hpp  logic.hpp  speedyGo.hpp  tsp.hpp
include/classes/: DistanceHandler.hpp  aprovizionare.hpp  autentificare.hpp  authentification.hpp  city.hpp  depot.hpp  depozit.hpp  detalii_produs.hpp  oras.hpp  product.hpp  route.hpp  supply.hpp  trasee_gps.hpp  traseu.hpp
setup/: setup.py
src/: CMakeLists.txt  GoogleMatrixAPI.cpp  GoogleMatrixAPI.hpp  Maps_Client.hpp  cross_platform_compatibility.hpp  database.cpp  database.hpp  declarations.cpp  declarations.hpp  geo_utils.hpp  haversine.cpp  haversine.hpp  logic.cpp  logic.hpp  main.cpp  run.sh  vcpkg.json
src/assets/: resource.rc
src/classes/: DistanceHandler.cpp  aprovizionare.cpp  autentificare.cpp  authentification.cpp  city.cpp  depot.cpp  depozit.cpp  detalii_produs.cpp  oras.cpp  product.cpp  route.cpp  supply.cpp  trasee_gps.cpp  traseu.cpp
src/include/: GoogleMatrixAPI.cpp  GoogleMatrixAPI.hpp  SpeedyGoAll.hpp  database.cpp  database.hpp  declarations.cpp  declarations.hpp  dijkstra.cpp  haversine.cpp  haversine.hpp  logic.hpp  speedyGo.cpp  tsp.cpp
src/include/classes/: DistanceHandler.cpp  authentification.cpp  city.cpp  depot.cpp  product.cpp  route.cpp  supply.cpp
src/logs/: TSP_log.txt
src/utils/: config.json
